// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searchbar renders correctly with mobile size 1`] = `
.c3 p {
  font-size: 16px;
  font-weight: 500;
}

.c0 {
  border-radius: 8px;
  font-size: 18px;
  border: none;
  background-color: transparent;
  box-shadow: rgb(0,0,0,0.15) 0px 5px 12px;
  height: 50px;
  width: 100%;
  padding: 0 10px 0 18px;
  border-radius: 24px;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  top: 2px;
  margin-right: 16px;
}

.c2 svg {
  width: 16px;
  height: 16px;
}

.c2 svg path {
  stroke-width: 2;
}

.c4 {
  margin: 0;
  font-family: 'Airbnb-Cereal';
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  className="c0"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="c1"
  >
    <div
      className="c2"
      style={Object {}}
    >
      <svg
        viewBox="0 0 56.966 56.966"
      >
        <path
          d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
        />
      </svg>
    </div>
    <div
      className="c3"
      style={Object {}}
    >
      <p
        className="c4"
        style={Object {}}
      >
        Where are you going?
      </p>
    </div>
  </div>
</button>
`;

exports[`Searchbar renders correctly with normal size 1`] = `
.c2 p {
  font-family: 'Airbnb-Cereal';
  font-size: 14px;
  font-weight: 500;
}

.c4 {
  width: 32px;
  height: 32px;
  background: -webkit-linear-gradient( right, rgb(230,30,77) 0%, rgb(227,28,95) 50%, rgb(215,4,102) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
}

.c0 {
  border-radius: 8px;
  font-size: 18px;
  border: none;
  background-color: transparent;
  border: 1px solid;
  height: 50px;
  max-width: 100%;
  padding: 0 7px 0 18px;
  min-width: 220px;
  border-radius: 24px;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c5 svg {
  width: 12px;
  height: 12px;
}

.c5 svg path {
  stroke-width: 2;
}

.c3 {
  margin: 0;
  font-family: 'Airbnb-Cereal';
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<button
  className="c0"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="c1"
  >
    <div
      className="c2"
      style={Object {}}
    >
      <p
        className="c3"
        style={Object {}}
      >
        Start your search
      </p>
    </div>
    <div
      className="c4"
      style={Object {}}
    >
      <div
        className="c5"
        style={Object {}}
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
    </div>
  </div>
</button>
`;
